# unicol-sandbox

./: Cargo.toml  README.md
benches/: benchmarks.rs
src/: lib.rs  main.rs
src/bincode/: decomp
test-data/: CollationTest_NON_IGNORABLE_SHORT.txt  CollationTest_SHIFTED_SHORT.txt  allkeys_bincode  allkeys_cldr_bincode
