[package]
name = "unicol-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
once_cell = "1.13.0"
regex = "1.6.0"
serde = { version = "1.0.138", features = ["derive"] }
unicode-canonical-combining-class = "0.3.0"
unicode-normalization = "0.1.21"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmarks"
harness = false
