[package]
name = "unicol-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
tinyvec = { version = "1.6.0", features = ["serde"] }
unicode-canonical-combining-class = "0.5.0"
unicode-normalization = "0.1.22"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false
