[package]
name = "unicol-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.166", features = ["derive"] }
tinyvec = { version = "1.6.0", features = ["serde"] }
unicode-canonical-combining-class = "0.5.0"
unicode-normalization = "0.1.22"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmarks"
harness = false
